--- a/src/run_config_bak.json
+++ b/src/run_config_bak.json
@@ -1,5 +1,5 @@
 {
-    "ENGINE": "cadquery",
+    "ENGINE": "solid",
     "save_dir": ".",
     "config_name": "DM",
     "show_caps": "MX",
@@ -8,16 +8,16 @@
     "ncols": 6,
     "alpha": 0.26179916666666664,
     "beta": 0.08726638888888888,
-    "centercol": 4,
+    "centercol": 3,
     "centerrow_offset": 3,
-    "tenting_angle": 0.20943933333333334,
+    "tenting_angle": 0.26179916666666664,
     "symmetry": "symmetric",
     "column_style_gt5": "orthographic",
     "column_style": "standard",
     "reduced_inner_cols": 2,
     "reduced_outer_cols": 0,
     "thumb_offsets": [
-        0,
+        6,
         -3,
         7
     ],
@@ -289,7 +289,7 @@
     "left_wall_lower_x_offset": 0,
     "left_wall_lower_y_offset": 0,
     "left_wall_lower_z_offset": 0,
-    "wall_thickness": 3.0,
+    "wall_thickness": 4.5,
     "wall_base_y_thickness": 4.5,
     "wall_base_x_thickness": 4.5,
     "wall_base_back_thickness": 4.5,
@@ -339,7 +339,7 @@
     "undercut_transition": 0.2,
     "plate_file": null,
     "plate_offset": 0.0,
-    "oled_mount_type": "NONE",
+    "oled_mount_type": "CLIP",
     "oled_center_row": 1.25,
     "oled_translation_offset": [
         0,
